change type of local baseline port to int
