# generate/swagger.json
@@ -171,6 +171,59 @@
       },
       "type": "object"
     },
+    "local": {
+      "properties": {
+        "from": {
+          "$ref": "#/definitions/local.From"
+        },
+        "mappings": {
+          "items": {
+            "$ref": "#/definitions/local.PortMapping"
+          },
+          "type": "array"
+        },
+        "name": {
+          "type": "string"
+        }
+      },
+      "type": "object"
+    },
+    "local.From": {
+      "properties": {
+        "kind": {
+          "description": "Kind of entity that we want to route to. One of (Service or Deployment or Rollout).",
+          "example": "Deployment",
+          "type": "string"
+        },
+        "name": {
+          "description": "Name of the entity within the Kubernetes cluster.",
+          "example": "my-frontend",
+          "type": "string"
+        },
+        "namespace": {
+          "description": "Namespace within which the entity lives in the Kubernetes cluster.",
+          "example": "default",
+          "type": "string"
+        }
+      },
+      "required": [
+        "kind",
+        "name",
+        "namespace"
+      ],
+      "type": "object"
+    },
+    "local.PortMapping": {
+      "properties": {
+        "port": {
+          "type": "integer"
+        },
+        "toLocal": {
+          "type": "string"
+        }
+      },
+      "type": "object"
+    },
     "resourceplugin.Runner": {
       "properties": {
         "image": {
@@ -657,8 +710,41 @@
       },
       "type": "object"
     },
+    "sandbox.LocalWorkloadStatus": {
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "tunnel": {
+          "properties": {
+            "health": {
+              "properties": {
+                "connected": {
+                  "type": "boolean"
+                },
+                "lastCheckTime": {
+                  "type": "string"
+                },
+                "lastConnectedTime": {
+                  "type": "string"
+                }
+              },
+              "type": "object"
+            }
+          },
+          "type": "object"
+        }
+      },
+      "type": "object"
+    },
     "sandbox.Readiness": {
       "properties": {
+        "local": {
+          "items": {
+            "$ref": "#/definitions/sandbox.LocalWorkloadStatus"
+          },
+          "type": "array"
+        },
         "message": {
           "description": "Message is a human readable explanation of why\nthe sandbox is healthy or not.",
           "type": "string"
@@ -725,6 +811,13 @@
           },
           "description": "Labels are used to specify metadata associated with the sandbox as key-value pairs.",
           "type": "object"
+        },
+        "local": {
+          "description": "Local Workloads",
+          "items": {
+            "$ref": "#/definitions/local"
+          },
+          "type": "array"
         },
         "resources": {
           "description": "Resources specifies each required resource to spin up the sandbox",
