# models/local_from.go
@@ -1,0 +1,108 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// LocalFrom local from
+//
+// swagger:model local.From
+type LocalFrom struct {
+
+	// Kind of entity that we want to route to. One of (Service or Deployment or Rollout).
+	// Example: Deployment
+	// Required: true
+	Kind *string `json:"kind"`
+
+	// Name of the entity within the Kubernetes cluster.
+	// Example: my-frontend
+	// Required: true
+	Name *string `json:"name"`
+
+	// Namespace within which the entity lives in the Kubernetes cluster.
+	// Example: default
+	// Required: true
+	Namespace *string `json:"namespace"`
+}
+
+// Validate validates this local from
+func (m *LocalFrom) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateKind(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateNamespace(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *LocalFrom) validateKind(formats strfmt.Registry) error {
+
+	if err := validate.Required("kind", "body", m.Kind); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *LocalFrom) validateName(formats strfmt.Registry) error {
+
+	if err := validate.Required("name", "body", m.Name); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *LocalFrom) validateNamespace(formats strfmt.Registry) error {
+
+	if err := validate.Required("namespace", "body", m.Namespace); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this local from based on context it is used
+func (m *LocalFrom) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *LocalFrom) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *LocalFrom) UnmarshalBinary(b []byte) error {
+	var res LocalFrom
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
