# models/local_port_mapping.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// LocalPortMapping local port mapping
+//
+// swagger:model local.PortMapping
+type LocalPortMapping struct {
+
+	// port
+	Port int64 `json:"port,omitempty"`
+
+	// to local
+	ToLocal string `json:"toLocal,omitempty"`
+}
+
+// Validate validates this local port mapping
+func (m *LocalPortMapping) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this local port mapping based on context it is used
+func (m *LocalPortMapping) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *LocalPortMapping) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *LocalPortMapping) UnmarshalBinary(b []byte) error {
+	var res LocalPortMapping
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
